{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 245,
  "lineage": "43f0e0e8-3794-51fa-ec5a-bd27b005c976",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ae35f5ffd033805",
            "domain": "vpc",
            "id": "eipalloc-05ae35f5ffd033805",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-208-242-52.compute-1.amazonaws.com",
            "public_ip": "54.208.242.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-geotechnologies-ugc-app",
              "VPC": "vpc-0219ad0936f6c2e94"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app",
              "VPC": "vpc-0219ad0936f6c2e94"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115228050885:internet-gateway/igw-0fe63fcac330249ee",
            "id": "igw-0fe63fcac330249ee",
            "owner_id": "115228050885",
            "tags": {
              "Name": "dev-geotechnologies-ugc-app"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app"
            },
            "vpc_id": "vpc-0219ad0936f6c2e94"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ae35f5ffd033805",
            "association_id": "eipassoc-031704ac7516a5c60",
            "connectivity_type": "public",
            "id": "nat-02cd3df8ef7c13043",
            "network_interface_id": "eni-044973895202383c2",
            "private_ip": "172.16.25.245",
            "public_ip": "54.208.242.52",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a92983c17a4207de",
            "tags": {
              "Name": "dev-geotechnologies-ugc-app"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b3251f9abd2e344c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02cd3df8ef7c13043",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3251f9abd2e344c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fe63fcac330249ee",
            "id": "r-rtb-00cea8741804e42a01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00cea8741804e42a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115228050885:route-table/rtb-0b3251f9abd2e344c",
            "id": "rtb-0b3251f9abd2e344c",
            "owner_id": "115228050885",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-geotechnologies-ugc-app"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0219ad0936f6c2e94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115228050885:route-table/rtb-00cea8741804e42a0",
            "id": "rtb-00cea8741804e42a0",
            "owner_id": "115228050885",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dev-geotechnologies-ugc-app"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0219ad0936f6c2e94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04642bfcb7a506b94",
            "route_table_id": "rtb-0b3251f9abd2e344c",
            "subnet_id": "subnet-02dc5ff1821e0b1d3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1b75e0161e955f5",
            "route_table_id": "rtb-0b3251f9abd2e344c",
            "subnet_id": "subnet-0afa8d111b40a9c55"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d80d774a6c5a455",
            "route_table_id": "rtb-00cea8741804e42a0",
            "subnet_id": "subnet-0a92983c17a4207de"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0652fbef15e05208d",
            "route_table_id": "rtb-00cea8741804e42a0",
            "subnet_id": "subnet-08d03d40d77c6847b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115228050885:subnet/subnet-02dc5ff1821e0b1d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dc5ff1821e0b1d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115228050885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-geotechnologies-ugc-app-private-subnet",
              "Role": "private",
              "Subnet": "us-east-1a-4"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app-private-subnet",
              "Role": "private",
              "Subnet": "us-east-1a-4"
            },
            "vpc_id": "vpc-0219ad0936f6c2e94"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115228050885:subnet/subnet-0afa8d111b40a9c55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afa8d111b40a9c55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115228050885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-geotechnologies-ugc-app-private-subnet",
              "Role": "private",
              "Subnet": "us-east-1c-5"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app-private-subnet",
              "Role": "private",
              "Subnet": "us-east-1c-5"
            },
            "vpc_id": "vpc-0219ad0936f6c2e94"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115228050885:subnet/subnet-0a92983c17a4207de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a92983c17a4207de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "115228050885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-geotechnologies-ugc-app-public-subnet",
              "Role": "public",
              "Subnet": "us-east-1a-1"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app-public-subnet",
              "Role": "public",
              "Subnet": "us-east-1a-1"
            },
            "vpc_id": "vpc-0219ad0936f6c2e94"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115228050885:subnet/subnet-08d03d40d77c6847b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d03d40d77c6847b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "115228050885",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-geotechnologies-ugc-app-public-subnet",
              "Role": "public",
              "Subnet": "us-east-1c-2"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app-public-subnet",
              "Role": "public",
              "Subnet": "us-east-1c-2"
            },
            "vpc_id": "vpc-0219ad0936f6c2e94"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115228050885:vpc/vpc-0219ad0936f6c2e94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-06abe5588de5898d3",
            "default_route_table_id": "rtb-063272538d3e6ee9b",
            "default_security_group_id": "sg-0e51d62bb803ab5a9",
            "dhcp_options_id": "dopt-0a0f3d883cf3d82d6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0219ad0936f6c2e94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063272538d3e6ee9b",
            "owner_id": "115228050885",
            "tags": {
              "Name": "dev-geotechnologies-ugc-app"
            },
            "tags_all": {
              "Name": "dev-geotechnologies-ugc-app"
            }
          }
        }
      ]
    }
  ]
}